--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -4,7 +4,8 @@
 
 .wrap {
   width: 100%;
-  max-width: none;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 /* Section utilities */
